--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -61,7 +61,7 @@
                                 <div class="modal-dialog modal-lg">
                                     <div class="modal-content py-1" style="height:39rem;">
                                         <div class="modal-header">
-                                            <h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
+                                            <h5 class="modal-title" id="staticBackdropLabel">Leave Application from <span class="text-primary">{{usr.first_name}}</span></h5>
                                             <button type="button" class="btn-close" data-bs-dismiss="modal"
                                                 aria-label="Close"></button>
                                         </div>
