minor fixes end

--- a/templates/_nav.html
+++ b/templates/_nav.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
-        <a class="navbar-brand ml-2" href=".">LeaveInStyle</a>
+        <a class="navbar-brand ml-2">LeaveInStyle</a>
 
         <div class="navbar-nav float-end">
             <span class="bg-info text-light rounded px-2 py-2">{{current_user}}</span>
